2004-12-15  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c, dbmail-message.h: abstracted message code a bit
	to handle mimeparts as well.
	* dbmail-imapsession.c, dbmail-imapsession.h, check_dbmail_imapd.c:
	fix in fetch code for octet-ranges.

2004-12-14  Paul Stevens <paul@nfg.nl>

	* main.c, lmtp.c, dbmail-message.c, dbmail-message.h: removed
	redundant whole_message_size parameter from split_message.
	* acinclude.m4, Makefile.am, configure.in, check_dbmail_imapd.c: added 
	unit-testing support using check.

2004-12-12  Paul Stevens <paul@nfg.nl>

	* imapcommands.c (_ic_copy): added transactional support
	* imapcommands.c: refactored several functions to remove duplicate
	code.

2004-12-10  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c: added full logging of imap
	server response.
	* mime.c (mime_readheader), list.c: several glib cleanups.
	* main.c, lmtp.c, header.c, dbmail-message.c: removed header.[ch]

2004-12-08  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, imap4.h, imapcommands.c:
	converted bodyfetch item to GList to allow fetching of multiple body
	parts in one fetch command.
	* dbmail-imapsession.c, imapcommands.c, imaputil.c, imaputil.h: replaced 
	give_chunks and free_chunks by their glib counterparts g_strsplit and 
	g_strfreev.

2004-12-08  Paul Stevens <paul@nfg.nl>

	* acinclude.m4, configure.in, debug.h, lmtp.c, main.c, mime.c, misc.c,
	sievecmd.c: adding garbage collection through the configure switch
	--with-gc and map all non-glib memory allocation calls to their my_ 
	variants.

	* acl.c, config.c, db.c, dbsearch.c, dbsearch.h, debug.c, debug.h,
	imapcommands.c, imaputil.c, imaputil.h, list.c, list.h, main.c,
	mime.c, misc.c, quota.c, sievecmd.c, smtp-convert.c, sort/sortsieve.c,
	timsieve.c, user.c: change all strdup call to my_strdup which uses
	my_malloc.

2004-12-06  Aaron Stone  <aaron@serendipity.cx>

	* lmtp.c: changed around a bunch of list handling to alleviate